tests/ui/imports/issue-2937.rs
use m::f as x; //~ ERROR unresolved import `m::f` [E0432]
               //~^ no `f` in `m`

mod m {}

fn main() {}
